--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 plots/
+newplots/
+trainedModel/
+trainedModels/
+__pycache__/
+*.py[cod]
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
